# coding_agent_session_search

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.ps1  install.sh
.beads/: beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl  search-ux-overhaul.jsonl
.checkpoint/: 2026-01-07-1255.md
.github/workflows/: dist.yml
.ralph-o/sessions/: current
.ralph-o/sessions/001-docsplans2026-01-23-fix-timeline-missing-workspace-planmd/: PROMPT.md  events.jsonl  scratchpad.md
benches/: index_perf.rs  search_perf.rs
docs/plans/: 2026-01-23-fix-timeline-missing-workspace-plan.md
src/: lib.rs  main.rs
src/connectors/: amp.rs  chatgpt.rs  claude_code.rs  cline.rs  codebuff.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs  pi_agent.rs
src/indexer/: mod.rs
src/pages/: key_management.rs
src/pages_assets/: coi-detector.js
src/search/: mod.rs  query.rs  tantivy.rs
src/storage/: sqlite.rs
src/ui/: mod.rs  sessions.rs  tui.rs
src/ui/components/: message_render.rs  mod.rs  theme.rs
tests/: cli_robot.rs  connector_amp.rs  connector_claude.rs  connector_cline.rs  connector_codex.rs  connector_gemini.rs  connector_opencode.rs  e2e_index_tui.rs  e2e_install_easy.rs  e2e_multi_connector.rs  e2e_search_index.rs  install_scripts.rs  regression_behavioral.rs  ui_components.rs  ui_footer.rs  ui_help.rs  ui_hotkeys.rs  ui_snap.rs
tests/fixtures/cli_contract/: api_version.json
tui/: pyproject.toml
tui/cass_tui/: __init__.py  __main__.py  app.py
tui/cass_tui/services/: __init__.py  session_index.py
(+18 files in other folders)
